--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -108,15 +108,16 @@ body {
 
 .header {
   display: table;
-  height: 100%;
+  height: 600px;
   width: 100%;
   position: relative;
-  background: url('../img/bg.jpg') no-repeat center center fixed; 
+  background: url('../img/bg.jpg') no-repeat center top; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
-}
+  background-size: contain;
+ }
+
 
 /* Intro */
 
@@ -127,7 +128,7 @@ body {
 /* Services */
 
 .services {
-  background: #7fbbda;
+  background: #032f46;
   padding: 50px 0;
   color: #ffffff;
 }
